<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity" android:paddingStart="@dimen/activity_padding_start"
        android:paddingTop="@dimen/activity_padding_top" android:paddingEnd="@dimen/activity_padding_end"
        android:paddingBottom="@dimen/activity_padding_bottom" android:orientation="vertical" android:gravity="center">
    <TextView
            android:text="@string/welcome_to_alc_4_0_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textColor="@android:color/black"/>
    <Button
            android:text="@string/about_alc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_about_alc"
            android:layout_marginTop="32dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:backgroundTint="@color/colorAccent"
            android:background="@drawable/button_rounded_corners" android:padding="10dp"/>
    <Button
            android:text="@string/my_profile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_my_profile"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:backgroundTint="@color/colorAccent"
            android:padding="10dp" android:background="@drawable/button_rounded_corners"/>
</LinearLayout>