<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_profile"
        tools:context=".ProfileActivity">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content" android:paddingBottom="@dimen/activity_padding_bottom">
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="150dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/layout" android:background="@color/colorPrimaryDark" android:orientation="vertical"/>
        <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:id="@+id/image_profile_pic"
                app:layout_constraintStart_toStartOf="@+id/layout"
                app:layout_constraintEnd_toEndOf="@+id/layout"
                app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="84dp"
                app:layout_constraintTop_toTopOf="@+id/layout" app:civ_border_width="5dp"
                app:civ_border_color="@color/colorPrimaryDark" android:src="@drawable/profile_pic"/>
        <TextView
                android:text="@string/track_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_track" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/text_view_slack_username"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_track"
                app:layout_constraintTop_toBottomOf="@+id/text_track" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Android" android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <TextView
                android:text="@string/country_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_country" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/text_view_track"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_country" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_country" tools:text="Ghana"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <TextView
                android:text="@string/email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_email" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/text_view_country"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_email" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_email" tools:text="email@gmail.com"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <TextView
                android:text="@string/phone_number_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_phone_number" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/text_view_email"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_phone_number"
                app:layout_constraintTop_toBottomOf="@+id/text_phone_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" tools:text="+233 24 068 7954"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_slack_username"
                tools:text="\@Username" android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintTop_toBottomOf="@+id/text_view_name" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_name"
                app:layout_constraintTop_toBottomOf="@+id/image_profile_pic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" android:layout_marginTop="8dp"
                android:textStyle="bold" tools:text="John Doe"/>
    </android.support.constraint.ConstraintLayout>

</ScrollView>